@@ -65,6 +65,10 @@ GNOME_PKGCONFIG_CHECK_MODULES(LIBBONOBOUI, libbonoboui-2.0:1.96.0)
 AC_SUBST(LIBBONOBOUI_CFLAGS)
 AC_SUBST(LIBBONOBOUI_LIBS)
 
+GNOME_PKGCONFIG_CHECK_MODULES(GCONF, gconf-2.0:1.1)
+AC_SUBST(GCONF_CFLAGS)
+AC_SUBST(GCONF_LIBS)
+
 AC_CHECK_LIB(popt, poptStrippedArgv,, AC_MSG_ERROR([popt 1.5 or newer is required to build
 gnome-libs. You can download the latest version from ftp://people.redhat.com/sopwith/popt/]))
 
