@@ -1,3 +1,8 @@
+2001-06-11  Cody Russell  <bratsche@gnome.org>
+
+	* configure.in: Add check for GCONF, then AC_SUBST GCONF_LIBS
+	and GCONF_CFLAGS.
+
 2001-06-07  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* configure.in: Added "az" and "wa" to the languages list.
